2010-07-26  David Reveman  <davidr@novell.com>

	* uielement.h:
	* uielement.cpp: Add GetRenderCacheMode.

	* runtime.h:
	* runtime.cpp: Add RUNTIME_INIT_ENABLE_CACHE_MODE.

2010-07-26  Jackson Harper  <jackson@ximian.com>

	* runtime.cpp: 
	* deployment.cpp|h: The XamlLoader no longer needs the string/file
	on instantiation.
	* xaml.cpp|h: The XamlLoader doesn't have to track the string/file
	its created with anymore. There was never any reason for this,
	since the input is passed in via a CreateFromString/File method.

2010-07-22  Jeffrey Stedfast  <fejj@novell.com>

	Initial work to fix Seadragon-513

	* multiscaleimage.cpp (ComputeActualSize): Implemented.
	(MeasureOverrideWithError): Implemented (might not be 100%
	correct).
	(MotionFinished): New method that gets called when all animations
	are finished. Emits the MotionFinishedEvent and updates the IsIdle
	status.
	(FadeFinished,PanFinished,ZoomFinished): Call MotionFinished() if
	all animations are complete instead of EmitMotionFinished().

	* media.cpp (Moonlight): Check if we can chain up first (makes no
	difference logically, but is more consistent with other code and
	might be "faster".

2010-07-22  David Reveman  <davidr@novell.com>

	* projection.cpp (TransformBounds): Don't round out bounds
	before transforming.

	* projection.cpp (Affine): Properly initialize affine matrix.

	* uielement.cpp (OnPropertyChanged): Need to update transform
	when whether we render to an intermediate buffer or not change.

	* uielement.cpp: A call to UpdateProjection is enough when
	projection property changes.

	* uielement.h:
	* uielement.cpp: Add InvalidateEffect.

	* uielement.h:
	* uielement.cpp:
	* textblock.cpp (ComputeBounds):
	* stylus.cpp (ComputeBounds):
	* shape.cpp:
	* panel.cpp (ComputeBounds):
	* grid.cpp (ComputeBounds):
	* glyphs.cpp (ComputeBounds):
	* frameworkelement.h:
	* frameworkelement.cpp:
	* canvas.cpp (ComputeBounds): Add extents_with_children and